wire_bridge/build/log/idf_py_stderr_output_55526
Command: make -j 6 all
/Users/macbookair/esp/ETH_02/wire_bridge/main/display_status.c: In function 'ui_show_ready':
/Users/macbookair/esp/ETH_02/wire_bridge/main/display_status.c:53:40: error: 'lv_font_montserrat_48' undeclared (first use in this function); did you mean 'lv_font_montserrat_14'?
   53 |     lv_obj_set_style_text_font(label, &lv_font_montserrat_48, 0);
      |                                        ^~~~~~~~~~~~~~~~~~~~~
      |                                        lv_font_montserrat_14
/Users/macbookair/esp/ETH_02/wire_bridge/main/display_status.c:53:40: note: each undeclared identifier is reported only once for each function it appears in
/Users/macbookair/esp/ETH_02/wire_bridge/main/display_status.c: In function 'display_init':
/Users/macbookair/esp/ETH_02/wire_bridge/main/display_status.c:93:10: error: 'esp_lcd_panel_dev_config_t' has no member named 'rgb_endian'
   93 |         .rgb_endian = LCD_RGB_ENDIAN_RGB,      // dažniausiai tinka ST7789
      |          ^~~~~~~~~~
/Users/macbookair/esp/ETH_02/wire_bridge/main/display_status.c:93:23: error: 'LCD_RGB_ENDIAN_RGB' undeclared (first use in this function); did you mean 'LCD_RGB_DATA_ENDIAN_BIG'?
   93 |         .rgb_endian = LCD_RGB_ENDIAN_RGB,      // dažniausiai tinka ST7789
      |                       ^~~~~~~~~~~~~~~~~~
      |                       LCD_RGB_DATA_ENDIAN_BIG
make[2]: *** [esp-idf/main/CMakeFiles/__idf_main.dir/display_status.c.obj] Error 1
make[1]: *** [esp-idf/main/CMakeFiles/__idf_main.dir/all] Error 2
make: *** [all] Error 2
